--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Angular 2 QuickStart</title>
+    <title>IMEMium</title>
+     <base href="/">
     <meta charset="UTF-8">
      <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <!-- Meta, title, CSS, favicons, etc. -->
@@ -11,6 +12,8 @@
 
     <!--Gentelella-->
     <link href="node_modules/gentelella/vendors/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
+    <!--DataTables-->
+    <link href="node_modules/gentelella/vendors/datatables.net-bs/css/dataTables.bootstrap.min.css" rel="stylesheet">
     <!-- Font Awesome -->
     <link href="node_modules/gentelella/vendors/font-awesome/css/font-awesome.min.css" rel="stylesheet">
     <link href="node_modules/gentelella/build/css/custom.min.css" rel="stylesheet">
@@ -18,6 +21,9 @@
 
      <!-- jQuery -->
     <script src="node_modules/gentelella/vendors/jquery/dist/jquery.min.js"></script>
+    <!--DataTables-->
+    <script src="node_modules/gentelella/vendors/datatables.net/js/jquery.dataTables.min.js"></script>
+    <script src="node_modules/gentelella/vendors//datatables.net-bs/js/dataTables.bootstrap.min.js"></script>
     <!-- Bootstrap -->
     <script src="node_modules/gentelella/vendors/bootstrap/dist/js/bootstrap.min.js"></script>
     <!-- FastClick -->
@@ -38,9 +44,9 @@
     <script>
       System.import('app').catch(function(err){ console.error(err); });
     </script>
-  </head>
-
+  </head> 
   <body>
     <my-app>Loading...</my-app>
   </body>
+
 </html>
