calendar feature; request panel

--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
     <link href="node_modules/gentelella/vendors/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
     <!--DataTables-->
     <link href="node_modules/gentelella/vendors/datatables.net-bs/css/dataTables.bootstrap.min.css" rel="stylesheet">
+    <!--FullCalendar-->
+    <link href="node_modules/gentelella/vendors/fullcalendar/dist/fullcalendar.min.css" rel="stylesheet">
+    <link href="node_modules/gentelella/vendors/fullcalendar/dist/fullcalendar.print.css" rel="stylesheet" media="print">
     <!-- Font Awesome -->
     <link href="node_modules/gentelella/vendors/font-awesome/css/font-awesome.min.css" rel="stylesheet">
     <link href="node_modules/gentelella/build/css/custom.min.css" rel="stylesheet">
@@ -31,6 +34,9 @@
     <!-- NProgress -->
     <script src="node_modules/gentelella/vendors/nprogress/nprogress.js"></script>
     <!-- Custom Scripts -->
+    <!--FullCalendar-->
+    <script src="node_modules/gentelella/vendors/moment/min/moment.min.js"></script>
+    <script src="node_modules/gentelella/vendors/fullcalendar/dist/fullcalendar.min.js"></script>
 
 
     <!-- Polyfill(s) for older browsers -->
