--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
       System.import('app').catch(function(err){ console.error(err); });
     </script>
   </head> 
-  <body>
+  <body style="background-color:#F7F7F7";">
     <my-app>Loading...</my-app>
   </body>
 
