--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <!--Gentelella-->
     <link href="node_modules/gentelella/vendors/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
     <!--DataTables-->
-    <link href="node_modules/gentelella/vendors/datatables.net-bs/css/dataTables.bootstrap.min.css" rel="stylesheet">
+    <!--<link href="node_modules/gentelella/vendors/datatables.net-bs/css/dataTables.bootstrap.min.css" rel="stylesheet">-->
     <!--FullCalendar-->
     <link href="node_modules/gentelella/vendors/fullcalendar/dist/fullcalendar.min.css" rel="stylesheet">
     <link href="node_modules/gentelella/vendors/fullcalendar/dist/fullcalendar.print.css" rel="stylesheet" media="print">
@@ -25,8 +25,11 @@
      <!-- jQuery -->
     <script src="node_modules/gentelella/vendors/jquery/dist/jquery.min.js"></script>
     <!--DataTables-->
-    <script src="node_modules/gentelella/vendors/datatables.net/js/jquery.dataTables.min.js"></script>
-    <script src="node_modules/gentelella/vendors//datatables.net-bs/js/dataTables.bootstrap.min.js"></script>
+    <!--<script src="node_modules/gentelella/vendors/datatables.net/js/jquery.dataTables.min.js"></script>
+    <script src="node_modules/gentelella/vendors//datatables.net-bs/js/dataTables.bootstrap.min.js"></script>-->
+
+
+    <!--data table angular 2-->
     <!-- Bootstrap -->
     <script src="node_modules/gentelella/vendors/bootstrap/dist/js/bootstrap.min.js"></script>
     <!-- FastClick -->
