--- a/imem/src/index.html
+++ b/imem/src/index.html
@@ -11,7 +11,7 @@
   <base href="/">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
-<body>
+<body style="background-color:#F7F7F7;">
   <app-root>Loading...</app-root>
 </body>
 </html>
