new gh-pages version

--- a/imem/404.html
+++ b/imem/404.html
@@ -11,7 +11,7 @@
   <base href="/imem/">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 <link href="styles.bundle.css" rel="stylesheet"/></head>
-<body>
+<body style="background-color:#F7F7F7;">
   <app-root>Loading...</app-root>
 <script type="text/javascript" src="inline.bundle.js"></script><script type="text/javascript" src="scripts.bundle.js"></script><script type="text/javascript" src="main.bundle.js"></script></body>
 </html>
