--- a/imem/index.html
+++ b/imem/index.html
@@ -8,7 +8,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <title>Imem</title>
-  <base href="/imem/">
+  <base href="/IMEMium/imem/">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 <link href="styles.bundle.css" rel="stylesheet"/></head>
 <body style="background-color:#F7F7F7;">
