--- a/imem/src/index.html
+++ b/imem/src/index.html
@@ -10,6 +10,8 @@
   <title>Imem</title>
   <base href="/">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  
+  <script src="https://apis.google.com/js/platform.js" async defer></script>
 </head>
 <body style="background-color:#F7F7F7;">
   <app-root>Loading...</app-root>
