--- a/imem/src/index.html
+++ b/imem/src/index.html
@@ -11,8 +11,8 @@
   <base href="/">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   
-  <script src="https://apis.google.com/js/platform.js" async defer></script>
 </head>
+  <script src="https://apis.google.com/js/platform.js"></script>
 <body style="background-color:#F7F7F7;">
   <app-root>Loading...</app-root>
 </body>
