change main user detail page (declarative ng2 forms) v0.1

--- a/imem/src/index.html
+++ b/imem/src/index.html
@@ -12,7 +12,7 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   
 </head>
-  <script src="https://apis.google.com/js/platform.js"></script>
+  <!--<script src="https://apis.google.com/js/platform.js"></script>-->
 <body style="background-color:#F7F7F7;">
   <app-root>Loading...</app-root>
 </body>
