--- a/imem/src/index.html
+++ b/imem/src/index.html
@@ -14,6 +14,13 @@
 </head>
   <!--<script src="https://apis.google.com/js/platform.js"></script>-->
 <body style="background-color:#F7F7F7;">
-  <app-root>Loading...</app-root>
+  <app-root>
+      <div class="text-center">
+          <section style="margin-top: 10%" class="login_content">
+          <h1>ИМЕМ</h1>
+          <i class="fa fa-spinner fa-spin fa-5x fa-fw"></i>
+          </section>
+      </div>
+  </app-root>
 </body>
 </html>
